perl6-idea-plugin/testData/highlight/User.rakumod
use Base;

<error descr="Re-declaration of foo from Base.rakumod:1">sub foo</error> {}
class <error descr="Re-declaration of C from Base.rakumod:3">C</error> {}
